a1/brendan_gordon/TEST_PROGRAMS/invalidtype/dongkyu_kim/error3.min
# using variable of invalid type in condition

var x: string;
var y: int;

while x do
    y = 3;
done


